@@ -17,39 +17,8 @@ Placing the connector jar in the appropriate subdirectory of the Hadoop installa
 
 To begin, you will need a JSON keyfile so the connector can authenticate to Google Cloud Storage. You can follow [these directions](https://cloud.google.com/storage/docs/authentication#service_accounts) to obtain a JSON keyfile.
 
-Once you have the JSON key file, you must add the following properties to `core-site.xml` on your server.
+Once you have the JSON key file, you must add the following property to `core-site.xml` on your server.
 
-    <property>
-      <name>fs.gs.impl</name>
-      <value>com.google.cloud.hadoop.fs.gcs.GoogleHadoopFileSystem</value>
-      <description>The FileSystem for gs: (GCS) uris.</description>
-    </property>
-    <property>
-      <name>fs.AbstractFileSystem.gs.impl</name>
-      <value>com.google.cloud.hadoop.fs.gcs.GoogleHadoopFS</value>
-      <description>
-        The AbstractFileSystem for gs: (GCS) uris. Only necessary for use with Hadoop 2.
-      </description>
-    </property>
-    <property>
-      <name>fs.gs.project.id</name>
-      <value></value>
-      <description>
-        Required. Google Cloud Project ID with access to configured GCS buckets.
-      </description>
-    </property>
-    <property>
-      <name>google.cloud.auth.service.account.enable</name>
-      <value>true</value>
-      <description>
-        Whether to use a service account for GCS authorizaiton. If an email and
-        keyfile are provided (see google.cloud.auth.service.account.email and
-        google.cloud.auth.service.account.keyfile), then that service account
-        willl be used. Otherwise the connector will look to see if it running on
-        a GCE VM with some level of GCS access in it's service account scope, and
-        use that service account.
-      </description>
-    </property>
     <property>
       <name>google.cloud.auth.service.account.json.keyfile</name>
       <value></value>
@@ -58,6 +27,8 @@ Once you have the JSON key file, you must add the following properties to `core-
         access when google.cloud.auth.service.account.enable is true.
       </description>
     </property>
+
+You can alternatively set the environment variable `GOOGLE_APPLICATION_CREDENTIALS` to your keyfile.
 
 Additional properties can be specified for the Cloud Storage connector, including alternative authentication options. For more information, see the values documented in the [gcs-core-default.xml](/gcs/conf/gcs-core-default.xml) file inside the `conf` directory.
 
