@@ -211,28 +211,6 @@ public class GoogleHadoopGlobalRootedFileSystemIntegrationTest
   }
 
   @Test
-  public void testInitializeThrowsWhenNoProjectIdConfigured()
-      throws URISyntaxException, IOException {
-    // Verify that incomplete config raises exception.
-    String existingBucket = bucketName;
-
-    Configuration config = new Configuration();
-    URI gsUri = new URI("gsg://foobar/");
-    config.setBoolean(GoogleHadoopFileSystemBase.ENABLE_GCE_SERVICE_ACCOUNT_AUTH_KEY, false);
-    config.setBoolean(
-        HadoopCredentialConfiguration.BASE_KEY_PREFIX
-            + HadoopCredentialConfiguration.ENABLE_NULL_CREDENTIAL_SUFFIX,
-        true);
-    config.set(GoogleHadoopFileSystemBase.GCS_SYSTEM_BUCKET_KEY, existingBucket);
-    // project ID is not set.
-
-    expectedException.expect(IOException.class);
-    expectedException.expectMessage(GoogleHadoopFileSystemBase.GCS_PROJECT_ID_KEY);
-
-    new GoogleHadoopGlobalRootedFileSystem().initialize(gsUri, config);
-  }
-
-  @Test
   public void testInitializeThrowsWhenWrongSchemeConfigured()
       throws URISyntaxException, IOException {
     // Verify that we cannot initialize using URI with a wrong scheme.
